<resources>
    <string name="app_name">Feeding India</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_introduction">IntroductionActivity</string>
    <string name="title_activity_register">Register as a Donor</string>
    <string name="title_activity_donate">Donate Food</string>
    <string name="hint_email">Email</string>
    <string name="err_email">Invalid Email</string>
    <string name="hint_phone">Phone Number</string>
    <string name="hint_emailaddress">Email Address</string>
    <string name="hint_firstname">First Name</string>
    <string name="hint_lastname">Last Name</string>
    <string name="hint_addressline1">Flat/House No, Floor, Building</string>
    <string name="hint_addressline2">Colony/Society, Street, Locality</string>
    <string name="hint_town">Town/City</string>
    <string name="hint_state">State</string>
    <string name="hint_pincode">Pin Code</string>
    <string name="hint_landmark">Landmark</string>
    <string name="description_hint">Description of Food</string>
    <string name="feed_hint">I have food for</string>
    <string name="Veg_text">Veg</string>
    <string name="NonVeg_text">Non-Veg</string>
    <string name="Both_Veg_NonVeg">Both</string>
    <string name="Packaged">Packed</string>
    <string name="Unpackaged">Unpacked</string>
    <string name="Both_Packaged_Unpackaged">Both</string>
    <string name="title_activity_maps">Map</string>
    <string name="err_firstname">Invalid First Name</string>
    <string name="err_lastname">Invalid Last Name</string>
    <string name="err_phone">Invalid Phone Number</string>
    <string name="err_addressline1">Invalid Address</string>
    <string name="err_addressline2">Invalid Address</string>
    <string name="err_town">Invalid Town</string>
    <string name="err_state">Invalid State</string>
    <string name="err_pincode">Invalid Pincode</string>
    <string name="err_landmark">Invalid Landmark</string>
    <string name="err_description_food">Please enter a Description of Food</string>
    <string name="food_for_text">Estimated number of people this can feed</string>
    <string name="food_type_text">Type :</string>
    <string name="food_packaging_text">Packaging :</string>
    <string name="title_activity_volunteer_register">Volunteer Registration</string>
    <string name="default_location">Default</string>
    <string name="geolocation">Geo Location</string>
    <string name="new_address">New Address</string>
    <string name="intro_1_text1">MY</string>
    <string name="intro_1_text2">FEEDING INDIA</string>
    <string name="intro_1_text3">MOBILE APP</string>
    <string name="intro_2_text1">CONNECT</string>
    <string name="intro_2_text2">WITH HUNGER HEROES</string>
    <string name="intro_2_text3">NEAREST TO YOU</string>
    <string name="intro_3_text1">DONATE</string>
    <string name="intro_3_text2">FOOD</string>
    <string name="intro_3_text3">WITH EASE</string>
    <string name="intro_4_text1">HELP</string>
    <string name="intro_4_text2">PEOPLE IN NEED</string>
    <string name="button_text_register">Don\'t have an Account? Sign up</string>
    <string name="button_text_volunteer">Join the Cause. Volunteer</string>
    <string name="button_text_login">Log in to Donate</string>
    <string name="button_text_thank_you">Make another donation</string>
    <string name="button_text_skip_login">Skip Login</string>
    <string name="title_activity_thank_you_screen">Thank You</string>
    <string name="thank_you_text1">A Hunger Hero\nwill contact you shortly</string>
    <string name="thank_you_text2">Thank you!</string>
    <string name="thank_you_text3">for donating food</string>
    <string name="title_activity_legal">Legal</string>
    <string name="select_day">Select</string>
    <string name="pick_a_day">Choose Pickup Date</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="leftIndex">Today</string>
    <string name="leftIndexValue">Tomorrow</string>
    <string name="rightIndex">Today</string>
    <string name="rightIndexValue">Tomorrow</string>
</resources>