<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">



        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />



        <LinearLayout
            android:id="@+id/linearcamera"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2">

            <ImageView
                android:id="@+id/clickediamge"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/camera" />

        </LinearLayout>


        <ScrollView
            android:layout_weight="3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin">


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/description_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintTextAppearance="@style/TextAppearance.AppCompat">

                    <EditText
                        android:id="@+id/description_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/description_hint" />
                </android.support.design.widget.TextInputLayout>


                <include
                    layout="@layout/divider"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />





                <TextView
                    android:id="@+id/food_for_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/food_for_text" />



                <com.appyvet.rangebar.RangeBar
                    xmlns:custom="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/rangebar"
                    android:layout_width="match_parent"
                    android:layout_height="72dp"
                    custom:tickStart="10"
                    custom:tickInterval="10"
                    custom:tickEnd="500"
                    custom:pinMaxFont="10sp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"/>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/food_for_textview_check"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="I have food for : "/>



                </LinearLayout>


                <include
                    layout="@layout/divider"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />


                <TextView
                    android:id="@+id/food_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/food_type_text" />


                <RadioGroup
                    android:id="@+id/food_type_RadioGroup"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:checkedButton="@+id/sound"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/check_if_Veg"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:checked="true"
                        android:text="@string/Veg_text" />

                    <RadioButton
                        android:id="@+id/check_if_NonVeg"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:checked="false"
                        android:text="@string/NonVeg_text" />

                    <RadioButton
                        android:id="@+id/check_if_both_veg_and_nonveg"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:checked="false"
                        android:text="@string/Both_Veg_NonVeg" />

                </RadioGroup>


                <include
                    layout="@layout/divider"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/food_packaging"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/food_packaging_text" />


                <RadioGroup
                    android:id="@+id/food_packaging_RadioGroup"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:checkedButton="@+id/sound"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/check_if_packed"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:checked="true"
                        android:text="@string/Packaged" />

                    <RadioButton
                        android:id="@+id/check_if_notpacked"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:checked="false"
                        android:text="@string/Unpackaged" />

                    <RadioButton
                        android:id="@+id/check_if_both_packed_and_notpacked"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:checked="false"
                        android:text="@string/Both_Packaged_Unpackaged" />

                </RadioGroup>

                <include
                    layout="@layout/divider"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:src="@drawable/ic_device_access_time" />

                    <TextView
                        android:id="@+id/textview_time"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:hint="Pickup Time Range" />


                    <Button
                        android:background="@color/green_4"
                        android:textColor="@color/white"
                        android:id="@+id/time_button"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Time" />


                </LinearLayout>

                <include
                    layout="@layout/divider"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:src="@drawable/ic_action_today" />

                    <TextView
                        android:id="@+id/textview_date"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:hint="Pickup Date" />


                    <Button
                        android:background="@color/green_4"
                        android:textColor="@color/white"
                        android:id="@+id/date_button"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Date" />


                </LinearLayout>



                <View
                    android:layout_width="match_parent"
                    android:layout_height="20sp"/>


            </LinearLayout>


        </ScrollView>



        <Button
            android:id="@+id/finishDonation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/green_3"
            android:text="Continue Donation"
            android:textColor="@color/white" />



    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/btnCapturePicture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:clickable="true"
        android:src="@drawable/ic_image_photo_camera"
        app:layout_anchor="@id/linearcamera"
        app:layout_anchorGravity="bottom|right|end" />


</android.support.design.widget.CoordinatorLayout>
