<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        tools:context="net.feedingindia.feedingindia.activites.MapsActivity"
        android:layout_weight="2"/>


    <LinearLayout
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="Select Address Type : "/>

        <include
            layout="@layout/divider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RadioGroup
            android:id="@+id/location_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkedButton="@+id/sound"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/default_location"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/default_location" />

            <RadioButton
                android:id="@+id/geolocation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="false"
                android:text="@string/geolocation" />


            <RadioButton
                android:id="@+id/new_address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="false"
                android:text="@string/new_address" />

        </RadioGroup>

        <include
            layout="@layout/divider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />



    </LinearLayout>




    <FrameLayout
        android:id="@+id/fragment_replacement"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"/>






</LinearLayout>